﻿			wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.38 (Beta 3)
^ Updated the program icon.
* Fixed FS#169 — "About dialog box fails to open web browser for home page URL"
* Fixed FS#171 — "Wrong string literal macro in generated headers for internationalized code generation"

03-27-2007 Version 3.00.37 (Beta 3)
+ Added mouse events to common events.
+ Added wxEVT_ERASE_BACKGROUND to wxTopLevelWindow events.

03-26-2007 Version 3.00.36 (Beta 3)
* Fixed FS#99 — "changes from menu editor remove all handlers."
^ Added a warning for unsupported properties.
^ Moved all container controls to a new containers plug-in.
^ Moved wxGrid to the "Additional" tab.
^ Moved wxRadioButton to the "Common" tab.
^ Moved wxPanel to the new "Containers" tab.
^ Updated most of the "Additional" tabs icons.
^ Reorganized the "Additional" tab.
+ Added style wxLC_NO_SORT_HEADER to wxListCtrl.
+ Added XRC support to wxFlatNotebook.
+ Added wxFontPickerCtrl.
+ Added wxFilePickerCtrl.
+ Added wxDirPickerCtrl.
+ Added OnIconize to wxTopLevelWindow events.

03-19-2007 Version 3.00.35 (Beta 3)
+ Added wxColourPickerCtrl using source provided by vaius.

03-15-2007 Version 3.00.34 (Beta 3)
+ Added extra_style property to xrc. This resolves FS#163.
* Updated propgrid, which fixed FS#162 — "Changing font point
   size in properties panel causes font size to become huge."
^ Changed font size for xrc editor in gtk to match cpp editors.
^ Editors no longer move horizontal scrollbar when generating.
^ Added a mini wxFormBuilder used controls plug-in.
  It is disabled until a user downloads the wxAdditions plug-in
  from the website. (http://wxformbuilder.org/?page_id=30)
^ Now using wxWidgets v2.8.2.

03-09-2007 Version 3.00.33 (Beta 3)
+ Implemented FS#156 — "Ability to wrap generated code in namespace(s)"
   using patch supplied by kramar.
+ Implemented FS#157 — "Ability to decorate the generated class with dll export"